--- a/src/components/book-chapter/book-chapter.css
+++ b/src/components/book-chapter/book-chapter.css
@@ -62,3 +62,15 @@ blockquote {
   padding: 4px 8px;
   border-radius: 8px;
 }
+
+::-webkit-scrollbar {
+  height: 4px;
+  width: 4px;
+  background-color: var(--highlight-10, rgba(0, 0, 0, 0.1));
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--highlight-20, rgba(0, 0, 0, 0.2));
+  border-radius: 2px;
+}
